--- a/client/src/components/List2/style2.css
+++ b/client/src/components/List2/style2.css
@@ -1,7 +1,6 @@
-/* .list-overflow-container {
-  width: 100%;
+.list-overflow-container {
   max-height: 545px;
-  border: 1px #dddddd solid;
+  border: 1px #DDDDDD solid;
   border-radius: 4px;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -22,7 +21,7 @@
 }
 
 .list-overflow-container li a {
-  color: #2a878c;
+  color: #2A878C;
 }
 
 .list-overflow-container li:first-child {
@@ -31,4 +30,4 @@
 
 .list-overflow-container li:last-child {
   border-bottom: none;
-} */
+}
